--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,62 @@
-.test {
-	height: 100px;
-	
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
+
+html {
+	background-size: 100%;
+	background-image: url('img/claa.gif');
+	font-size: 2em;
+	font-family: 'Amatic SC', cursive;
 }
+
 .navbar {
 	height: 80px;
-	background-color: #28c9c4;
-	/*line-height: 80px;*/
+	background-color: MidnightBlue;
+	line-height: 80px;
 }
+
 aside {
 	min-height: 200px;
-	background-color: #8df2ef;
+	background-color: Firebrick;
 }
+
 article {
 	min-height: 600px;
-	background-color: #56e3de;
+	background-color: YellowGreen;
 }
+
 footer {
-	height: 160px;
-	background-color: #28c9c4;
+	min-height: 160px;
+	background-color: SlateBlue;
 }
+
 .link {
 	text-decoration: none;
-	color: #eee;
+	color: #fff;
 	font-size: 1.2em;
-	width: 130px; 
-	text-align: center;
+	padding: 0px 15px;
+}
+
+p {
+	margin: 0em 1em;
+	color: #fff;
+	font-size: 1.2em;
+}
+
+h1 {
+	color: #fff;
+	margin-left: 20px;
+}
+
+.im1 {
+	width: 100%; height: 100%;
+}
+
+.im2-1 {
+	width: 40%; height: 40%;
+	margin: 0px 0px;
+	background-color: #fff;
+	border-radius: 6%;
+}
+
+.centt {
+	margin: 20px 0px;
 }
