--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
+@import url('https://images2.popmeh.ru/upload/default/308/308c00d45699028d1d3b4bcc12cac336.jpg');
 
 html {
 	background-size: 100%;
-	background-image: url('img/claa.gif');
+	background-image: url('ihttps://images2.popmeh.ru/upload/default/308/308c00d45699028d1d3b4bcc12cac336.jpg');
 	font-size: 2em;
 	font-family: 'Amatic SC', cursive;
 }
