--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://images2.popmeh.ru/upload/default/308/308c00d45699028d1d3b4bcc12cac336.jpg');
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
 
 html {
 	background-size: 100%;
