--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 html {
 	background-size: 100%;
-	background-image: url('ihttps://images2.popmeh.ru/upload/default/308/308c00d45699028d1d3b4bcc12cac336.jpg');
+	background-image: url('img/topfon.jpg');
 	font-size: 2em;
 	font-family: 'Amatic SC', cursive;
 }
